Add missing dependencies: libdrm and gbm
Signed-off-by: Damian Wrobel <dwrobel@ertelnet.rybnik.pl>

Change-Id: I86ed1d5172ccf5ca52678258a2155c12d24e2bdf

--- a/drm/Makefile.am
+++ b/drm/Makefile.am
@@ -45,12 +45,12 @@ libwesteros_gl_la_SOURCES = westeros-gl/westeros-gl.c
 
 libwesteros_gl_la_include_HEADERS = westeros-gl/westeros-gl.h
 libwesteros_gl_la_includedir = $(includedir)
-libwesteros_gl_la_CFLAGS= $(AM_CFLAGS) -D_GNU_SOURCE 
+libwesteros_gl_la_CFLAGS= $(AM_CFLAGS) $(GBM_CFLAGS) $(LIBDRM_CFLAGS) -D_GNU_SOURCE
 
 libwesteros_gl_la_LDFLAGS= \
    $(AM_LDFLAGS) \
-   -ldrm \
-   -lgbm
+   $(LIBDRM_LIBS) \
+   $(GBM_LIBS)
 
 
 libwesteros_gl_console_helper_la_SOURCES = westeros-gl/westeros-gl-console-helper.c
