v4l2, raw: add support for AFD and Bar meta data
Change-Id: I75a3e13db7191b2542752936b7e458cdfbba061f
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/westeros-sink/raw/Makefile.am
+++ b/westeros-sink/raw/Makefile.am
@@ -32,6 +32,10 @@ if HAVE_GST_VIDEO
 AM_CFLAGS += -DUSE_GST_VIDEO
 endif
 
+if HAVE_GST_AFD
+AM_CFLAGS += -DUSE_GST_AFD
+endif
+
 if HAVE_GST_ALLOCATORS
 AM_CFLAGS += -DUSE_GST_ALLOCATORS
 endif
