--- a/westeros-sink/raw/configure.ac
+++ b/westeros-sink/raw/configure.ac
@@ -43,6 +43,7 @@ AC_HEADER_STDBOOL
 
 IARM_CFLAGS=" "
 GST_VIDEO_DETECTED=" "
+GST_AFD_DETECTED=" "
 GST_ALLOCATORS_DETECTED=" "
 
 # Checks for library functions.
@@ -68,6 +69,8 @@ AS_IF([test "x$enable_gstreamer1" = "xyes"], [
     PKG_CHECK_MODULES([GSTVIDEO], [gstreamer-video-1.0 >= 1.4],[GST_VIDEO_DETECTED=true],[GST_VIDEO_DETECTED=false])
     PKG_CHECK_MODULES([GSTALLOCATORS], [gstreamer-allocators-1.0 >= 1.4],[GST_ALLOCATORS_DETECTED=true],[GST_ALLOCATORS_DETECTED=false])
     AC_DEFINE(USE_GST1, 1, [Build with GStreamer 1.x])
+    CFLAGS="$CFLAGS $GST_CFLAGS"
+    AC_CHECK_HEADER([gstreamer-1.0/gst/video/video-anc.h],[GST_AFD_DETECTED=true],[GST_AFD_DETECTED=false],[])
   ], [])
 ], [])
 
@@ -90,6 +93,7 @@ PKG_CHECK_MODULES([WAYLAND_CLIENT],[wayland-client >= 1.6.0])
 PKG_CHECK_MODULES([WAYLAND_SERVER],[wayland-server >= 1.6.0])
 
 AM_CONDITIONAL([HAVE_GST_VIDEO], [test x$GST_VIDEO_DETECTED = xtrue])
+AM_CONDITIONAL([HAVE_GST_AFD], [test x$GST_AFD_DETECTED = xtrue])
 AM_CONDITIONAL([HAVE_GST_ALLOCATORS], [test x$GST_ALLOCATORS_DETECTED = xtrue])
 
 WAYLANDLIB="-lwayland-client"
