--- a/westeros-sink/v4l2/Makefile.am
+++ b/westeros-sink/v4l2/Makefile.am
@@ -32,6 +32,10 @@ if HAVE_GST_VIDEO
 AM_CFLAGS += -DUSE_GST_VIDEO
 endif
 
+if HAVE_GST_AFD
+AM_CFLAGS += -DUSE_GST_AFD
+endif
+
 if HAVE_GST_ALLOCATORS
 AM_CFLAGS += -DUSE_GST_ALLOCATORS
 endif
