Add test cases for ERM
Change-Id: I4e2592a84036d14b3f6063cd6c9af48f8ec1661a
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>

--- a/test/Makefile.brcm
+++ b/test/Makefile.brcm
@@ -407,7 +407,7 @@ westeros-essos:
 	automake --foreign --add-missing && \
 	rm -f configure && \
 	autoconf && \
-	./configure --prefix $(WID) && \
+	./configure --prefix $(WID) CXXFLAGS='-DUSE_ESSRMGR_UDS_IMPL' && \
 	make && make install
 
 westeros-render-nexus:
