--- a/test/drm-em/Makefile.am
+++ b/test/drm-em/Makefile.am
@@ -35,6 +35,7 @@ westeros_unittest_SOURCES = ../test-main.cpp \
                             ../test-touch.cpp \
                             ../test-simpleshell.cpp \
                             ../test-essos.cpp \
+                            ../test-essos-erm.cpp \
                             ../test-clientapp.cpp \
                             ../test-repeaterapp.cpp \
                             soc-video-src.cpp \
@@ -50,6 +51,7 @@ westeros_unittest_LDFLAGS= \
    -lwesteros_compositor \
    -lwesteros_simpleshell_client \
    -lessos \
+   -lessosrmgr \
    -lwesteros-ut-em \
    -ldl -lpthread
 
