--- a/test/Makefile.drm
+++ b/test/Makefile.drm
@@ -261,7 +261,7 @@ westeros-essos:
 	automake --foreign --add-missing && \
 	rm -f configure && \
 	autoconf && \
-	./configure --prefix $(WID) && \
+	./configure --prefix $(WID) CXXFLAGS='-DUSE_ESSRMGR_UDS_IMPL' && \
 	make && make install
 
 westeros-soc-sink:
