raw,v4l2: use 64 bit offsets for DRM_IOCTL_MODE_MAP_DUMB
Signed-off-by: jwanna001 <jeff_wannamaker@cable.comcast.com>
Change-Id: Ie2b14184b29998d6c8c5d094ea6b294b42f2abbe

--- a/westeros-sink/raw/Makefile.am
+++ b/westeros-sink/raw/Makefile.am
@@ -24,7 +24,7 @@ GST_BASE_CFLAGS ?=
 GST_BASE_LIBS ?=
 LIB_SUB_DIR= gstreamer-0.10
 
-AM_CFLAGS = $(GST_CFLAGS) -DUSE_RAW_SINK
+AM_CFLAGS = $(GST_CFLAGS) -DUSE_RAW_SINK -D_FILE_OFFSET_BITS=64
 
 AM_LDFLAGS = $(GST_LIBS) $(GSTBASE_LIBS) $(GSTVIDEO_LIBS) $(GSTALLOCATORS_LIBS) $(WAYLANDLIB) -avoid-version
 
